# haqdesk_ai

./: .gitignore  HaqDesk_AI_query.sql  META_INTEGRATION_GUIDE.md  README.md
backend/: .env.example  migrate_db.py  migrate_rag.py  pyproject.toml  requirements.txt  reset_db.py  task.md
backend/app/: main.py
backend/app/auth/: utils.py
backend/app/core/: config.py  database.py  dependencies.py  preflight.py
backend/app/models/: __init__.py  business.py  conversation.py  customer.py  customer_identity.py  integration.py  invitation.py  knowledge.py  message.py  user.py
backend/app/prompts/: customer_reply_prompt.py
backend/app/routers/: auth.py  customers.py  inbox.py  integrations.py  knowledge.py  team.py  whatsapp.py
backend/app/schemas/: integration.py
backend/app/services/: llm_gateway.py  messaging_service.py  oauth_service.py  rag_service.py  sentiment_service.py  webhook_service.py
backend/tests/: test_auth.py  test_inbox.py  test_llm_gateway.py  test_rag.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/accept-invite/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/inbox/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/super-admin/: page.tsx
frontend/app/team/: page.tsx
frontend/components/chat/: AISuggestionBox.tsx  ChatWindow.tsx  CustomerSidebar.tsx  MessageBubble.tsx
frontend/components/layout/: AppSidebar.tsx  (+1 more)
frontend/lib/: api.ts
(+2 files in other folders)
